Made updates to all the other pages including adding content to the side pages. Changed the name of Coming soon to Products

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <strong>Wayne Enterprises</strong>
+    <img src="https://i.pinimg.com/originals/76/18/9a/76189a638354fb7f3c567d9f4b6dc39c.jpg">
     <title>Wayne Enterprises</title>
 </head>
 
@@ -12,6 +13,8 @@
     <ul>
         <li><a href="x_aboutus.html">About Us</a></li>
         <li><a href="y_WayneFoundation.html">Wayne Foundation</a></li>
-        <li><a href="z_ComingSoon.html">Coming Soon</a></li>        
+        <li><a href="z_Products.html">Products</a></li>        
     </ul>
 </body>
+
+</html>
