--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
 
 <head>
-    <img src="https://i.pinimg.com/originals/76/18/9a/76189a638354fb7f3c567d9f4b6dc39c.jpg">
     <title>Wayne Enterprises</title>
 </head>
 
 <body>
-    <h1> <em>We do everything</em></h1>
-    
+    <img src="https://i.pinimg.com/originals/76/18/9a/76189a638354fb7f3c567d9f4b6dc39c.jpg">
+    <h1>Wayne Enterprises</h1>
 
-    <h2>Navigate Here</h2>
+    <h2> <em>We do everything</em></h2>
+
+    <h3>Navigate Here</h3>
     <ul>
         <li><a href="x_aboutus.html">About Us</a></li>
         <li><a href="y_WayneFoundation.html">Wayne Foundation</a></li>
         <li><a href="z_Products.html">Products</a></li>        
     </ul>
+    
 </body>
 
 </html>
