--- a/y_WayneFoundation.html
+++ b/y_WayneFoundation.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <title>Wayne Foundation</title>
-    <strong>Wayne Foundation</strong>
 </head>
 
 <body>
+    <h1><strong>Wayne Foundation</strong></h1>
     <p>Thirty years ago, Thomas Wayne, former owner and doctor created the Wayne Foundation for the betterment of society.</p>
     <p>Today, the Foundation continues to utilize the resources to improve conditions in Gotham City and the world.</p>
     <p>Please consider DONATING today!</p>
